Changing token expiries to stricter limits, and implementing redis fror token burning